HISTORY
----------

3.4.1 Ported the repository from GoogleCode to GitHub.
     setuptools is made mandatory in Python 3.
3.4.0 Added the ability to use classes and generic callables as callers and
     implemented a signature-preserving contexmanager decorator. Fixed a bug
     with the signature f(**kw) in Python 3 and fixed a couple of doctests
     broken by Python 3.3, both issues pointed out by Dominic Sacré (18/10/2012)
3.3.3 Fixed a bug with kwonlyargs for Python 3, submitted by Chris
     Ellison (23/04/2012)
3.3.2 Fixed a bug with __kwdefaults__ for Python 3, submitted by Chris
     Ellison (01/09/2011)
3.3.1 Fixed a doctest broken for Python 3.2, as noted by
     Arfrever Frehtes Taifersar Arahesis; changed the name of
     the attribute ``undecorated`` to ``__wrapped__`` following the
     Python 3.2 convention, as requested by Ram Rachum; added
     the Python 3 classifier to setup.py (22/04/2011)
3.3. Added support for function annotations (1/1/2011)
3.2.1. Now the .func_globals of the decorated function are the same of
     the undecorated function, as requested by Paul Ollis (28/12/2010)
3.2. Added __version__ (thanks to Gregg Lind), removed functionality which 
     has been deprecated for years, removed the confusing decorator_factory
     example and added official support for Python 3 (requested by Claus Klein).
     Moved the documentation from PyPI to googlecode (22/05/2010)
3.1.2. Added attributes args, varargs, keywords and arg0, ..., argN
     to FunctionMaker objects generated from a function; fixed another
     Pylons-breaking bug signaled by Lawrence Oluyede (25/08/2009)
3.1.1. Fixed a bug which was breaking Pylons, signaled by
     Gabriel de Perthuis, and added a test for it. (18/08/2009)
3.1. Added decorator.factory, an easy way to define families of decorators
     (requested by various users, including David Laban). Refactored the
     FunctionMaker class and added an easier to use .create classmethod.