@@ -1,0 +1,10 @@
+anguage: python
+
+python:
+ - "2.7"
+
+install:
+  - python setup.py install
+
+script:
+  python documentation.py
